# jaxml

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  t.py
.github/workflows/: ci.yml
jaxml/: _generate.py  cache.py  config.py  utils.py
jaxml/models/: llama.py
jaxml/nn/: attention.py  embedding.py  linear.py  module.py  norms.py  position.py
jaxml/test_utils/: torch_utils.py
scripts/: check_dependency_drift.py  inference_test.py  interface.py  prepare.py  probe_dependency_upgrade.py  sample.py  show_sharding.py  show_sharding2.py
src/jaxml/: __init__.py  _generate.py  _validation.py  cache.py  config.py  hf_utils.py  outputs.py  text_generation.py  utils.py
src/jaxml/experimental/: __init__.py  rnn_discrete.py
src/jaxml/inference_engine/: __init__.py  engine.py  hf_loader.py  sampling.py
src/jaxml/models/: __init__.py  _utils.py  gemma3.py  gpt_neox.py  llama.py
src/jaxml/nn/: __init__.py  attention.py  embedding.py  linear.py  module.py  norms.py  position.py
tests/: conftest.py  test_aot_cache.py  test_attention.py  test_cache.py  test_config.py  test_dense.py  test_dependency_surface.py  test_experimental_rnn_discrete.py  test_gemma.py  test_generate_core.py  test_generation.py  test_hf_utils.py  test_llama.py  test_model_heads.py  test_model_inputs.py  test_modules.py  test_neox.py  test_public_api.py  test_rope.py  test_sampling.py  test_text_generation.py  test_tpu.py  test_validation.py
