[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"


[project]
name = "jaxml"
description = ""
authors = [{name = "Honglu Fan"}]
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.0"
dependencies = [
    "jax==0.10.1",
    "jaxlib==0.10.1",
    "flax==0.12.7",
    "jax-tqdm==0.4.0",
]

[project.optional-dependencies]
tpu = [
    "jax==0.10.1",
    "jaxlib==0.10.1",
    "libtpu==0.0.41",
]
dev = [
    "pytest==8.4.2",
    "black>=24.0.0",
    "isort==5.13.2",
    "flake8==7.3.0",
    "torch==2.4.0",
    "transformers==4.57.6",
]

[tool.pytest.ini_options]
markers = [
    "tpu: tests that require a TPU runtime and are excluded from the default CPU suite",
]

[tool.black]
line-length = 127
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 127
